@@ -26,6 +26,8 @@ Hbase Change Log
                that reach the client even after retries
    HBASE-460   TestMigrate broken when HBase moved to subproject   
    HBASE-462   Update migration tool
+   HBASE-473   When a table is deleted, master sends multiple close messages to
+               the region server
    
   IMPROVEMENTS
    HBASE-415   Rewrite leases to use DelayedBlockingQueue instead of polling
